# snap-claim-rs

./: .gitignore  README.md  RELEASE_NOTES.md  TAILWIND_FIX.md  index.html  package-lock.json  package.json  vite.config.ts
.codegraph/: daemon.pid
.github/workflows/: release.yml
.trae/rules/: git-commit-message.md
docs/: IMAGE_RECOGNITION.md  LOCAL_OCR_SPEC.md  TODO.md  VERSION.md
docs/design/: index.html
docs/prototype/: update-flow.html
public/: pdfium-mac-arm64.tgz
scripts/: generate-version-history.js
src/: App.tsx  test-setup.ts  version-history.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: excel.rs  mod.rs  pdf.rs  recognition.rs  update.rs
src-tauri/src/config/: mod.rs  rules.yaml
src-tauri/src/models/: mod.rs
src-tauri/src/services/: excel_service.rs  expense_calculator.rs  mod.rs  pdf_service.rs  recognition_service.rs  result_formatter.rs
src-tauri/src/utils/: amount_converter.rs  mod.rs
src/components/: AboutModal.tsx  CarClassifyModal.tsx  DateRangeModal.tsx  DragMask.tsx  Header.tsx  MergePdfModal.tsx  Panels.tsx  UpdateDialog.test.tsx  UpdateDialog.tsx  UpdateProgressWidget.test.tsx  UpdateProgressWidget.tsx
src/components/ui/: button-variants.ts  calendar.tsx  card.tsx
src/lib/: gsap-hooks.ts  mockData.ts  tauri.ts  utils.ts
src/services/ocr/: PaddleOcrService.test.ts  PaddleOcrService.ts  imageHint.test.ts  imageHint.ts  normalize.ts  (+4 more)
src/styles/: globals.css
src/types/: index.ts
(+2 files in other folders)
