[package]
name = "snap-claim"
version = "1.2.0"
description = "自动识别电子发票PDF、出行确认单，生成费用报销单"
authors = ["SanXiaoXing"]
edition = "2021"

[lib]
name = "snap_claim_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
serde_yaml = "0.9"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pdfium-render = "0.8"
rxing = "0.5"
rust_xlsxwriter = "0.96"
